--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -64,3 +64,147 @@ body{
   color: var(--main-color);
   display: none;
 }
+section{
+  min-height: 100vh;
+  padding: 10rem 9% 10rem;
+}
+.home{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8rem;
+}
+.home-content h3{
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+span{
+  color: var(--main-color);
+}
+.logo span {
+  color: var(--main-color);
+}
+.home-content h3:nth-of-type(2){
+  margin-bottom: 2rem;
+  font-size: 5rem;
+}
+.home-content h1{
+  font-size: 8rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.home-page{
+  border-radius: 50%;
+}
+.home-page img{
+  position: relative;
+  width: 25vw;
+  border-radius: 50%;
+  box-shadow: 0 0 15px var(--main-color);
+}
+.home-content p{
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.social-icons a{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  background: transparent;
+  border: 0.2rem solid var(--main-color);
+  font-size: 2rem;
+  border-radius: 50%;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+  transition: 0.3s ease;
+}
+.social-icons a:hover{
+  color: white;
+  transform: scale(1.3)translateY(-5px);
+  background-color: var(--main-color);
+  box-shadow: 0 0 25px var(--main-color);
+}
+
+.btn{
+  display: inline-block;
+  padding: 1rem 2.8rem;
+  background: var(--bg-color);
+  border-radius: 4rem;
+  font-size: 1.6rem;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.btn:hover{
+  transform: scale(1.05);
+  background: var(--main-color);
+  color: var(--text-color);
+  box-shadow: 0 0 25px var(--main-color);
+}
+.text-animation{
+  font-size: 34px;
+  font-weight: 600;
+  min-width: 280px;
+}
+.text-animation span{
+  position: relative;
+}
+.text-animation span::before{
+  content: 'Software Developer';
+  color: var(--main-color);
+  animation: words 20s infinite;
+}
+.text-animation span::after{
+  content: '';
+  background-color: var(--bg-color);
+  position: absolute;
+  width: calc(100% + 8px);
+  height: 100%;
+  border-left: 3px solid var(--bg-color);
+  right: -8px;
+  animation: cursor 0.6s infinite, typing 20s steps(14) infinite ;
+}
+@keyframes cursor{
+  to{
+    border-left: 2px solid var(--main-color);
+  }
+}
+@keyframes words{
+  0%,
+  20%{
+    content: 'Web Developer';
+  }21%,
+  40%{
+    content: 'Web Designer';
+  }
+}
+@keyframes typing{
+  10%,
+  15%,
+  30%,
+  35%,
+  50%,
+  55%,
+  70%,
+  75%,
+  90%,
+  95%{
+    width: 0;
+  }
+  5%,
+  20%,
+  25%,
+  40%,
+  45%,
+  60%,
+  65%,
+  80%,
+  85%{
+    width: calc(100% + 8px);
+  }
+}
