--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -208,3 +208,65 @@ span{
     width: calc(100% + 8px);
   }
 }
+.heading{
+  text-align: center;
+  font-size: 8rem;
+}
+.services{
+  background-color: var(--second-bg-color);
+}
+.services h2{
+  margin-bottom: 8rem;
+}
+.service-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+.service-container .services-box{
+  flex: 1 1 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: var(--main-color);
+  padding: 3rem 2rem 4rem;
+  height: 400px;
+  border-radius: 2rem;
+  border: 3px solid transparent;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+.service-container .services-box:hover{
+  transform: scale(1.02);
+  background-color: white;
+  color: black;
+}
+.services-box i{
+  font-size: 7rem;
+  color: black;
+  margin-bottom: 1rem;
+}
+.services-box h3{
+  font-size: 2.6rem;
+}
+.services-box p{
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
+}
+.services-box .btn{
+  background-color: white;
+}
+.services-box .btn:hover{
+  color: var(--main-color);
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--main-color);
+}
+::-webkit-scrollbar-track{
+  background-color: var(--bg-color);
+  width: 50px;
+}
