--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -214,6 +214,7 @@ span{
 }
 .services{
   background-color: var(--second-bg-color);
+  
 }
 .services h2{
   margin-bottom: 8rem;
@@ -269,4 +270,77 @@ span{
 ::-webkit-scrollbar-track{
   background-color: var(--bg-color);
   width: 50px;
+}
+.projects{
+  background: var(--bg-color);
+}
+.projects h2{
+  margin-bottom: 8rem;
+}
+.projects-container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  align-items: center;
+  gap: 2.5rem;
+}
+.projects-container .projects-box{
+  position: relative;
+  border-radius: 2rem;
+  height: 550px;
+  overflow: hidden;
+  display: flex;
+}
+.projects-box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease;
+}
+.projects-box:hover img{
+  transform: scale(1.1);
+}
+.projects-box .projects-info{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+.projects-box .projects-info:hover{
+  background: radial-gradient(rgb(255, 187, 187),var(--main-color));
+  transform: scale(1.1);
+}
+.projects-info h4{
+  font-size: 3rem;
+  color: rgb(18, 16, 16);
+  font-weight: 800;
+}
+.projects-info p{
+font-size: 1.6rem;
+margin: 0.3rem 0 1rem;
+font-weight: 600;
+color: rgb(34, 31, 31);
+}
+.projects-info a{
+  color: white;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background: white;
+  border: 2px solid var(--main-color);
+  border-radius: 50%;
+}
+.projects-info a i{
+  font-size: 3rem;
+  color: var(--main-color);
 }
